--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <button>Click me</button>
     <script src="src/js/script.js"></script>
 </body>
 </html>
