--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Hello World!</h1>
     <button>Click me</button>
     <script src="src/js/script.js"></script>
+    <h2>Hello git</h2>
 </body>
 </html>
